--- a/Source/ScreenCropper.WPF/MainWindow.xaml
+++ b/Source/ScreenCropper.WPF/MainWindow.xaml
@@ -14,6 +14,9 @@
         AllowsTransparency="True"
         WindowStyle="None"
         Background="#3FFFFFFF"
+        
+        Visibility="Hidden"
+        ShowInTaskbar="False"
         >
     <Grid>
 
