--- a/Source/ScreenCropper.WPF/Windows/ScreenshotOverlay.xaml
+++ b/Source/ScreenCropper.WPF/Windows/ScreenshotOverlay.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ScreenCropper.WPF.MainWindow"
+﻿<Window x:Class="ScreenCropper.WPF.ScreenshotOverlay"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
