--- a/Source/ScreenCropper.WPF/App.xaml
+++ b/Source/ScreenCropper.WPF/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="ScreenCropper.WPF.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ScreenCropper.WPF"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:ScreenCropper.WPF">
     <Application.Resources>
          
     </Application.Resources>
